--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     # Runs every 2 hours
-    - cron: "1 1 * * 0"
+    - cron: "* * * * *"
 
 jobs:
   update-readme:
