--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,13 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_UPDATED_DATE: True
+          UPDATED_DATE_FORMAT: "%Y/%m/%d"
+          SHOW_LINES_OF_CODE: True
+          SHOW_PROFILE_VIEWS: False
+          SHOW_DAYS_OF_WEEK: False
+          SHOW_COMMIT: False
+          SHOW_EDITORS: False
+          SHOW_SHORT_INFO: False
+          SHOW_LOC_CHART: False
+          
