--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,6 @@ jobs:
           SHOW_EDITORS: False
           SHOW_SHORT_INFO: False
           SHOW_LOC_CHART: False
+          SHOW_OS: False
+          
           
